--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx2G -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.java.installations.fromEnv=JDK_8
 
 group=org.jetbrains.kotlinx
-version=0.6.1
-versionSuffix=SNAPSHOT
+version=0.6.1.1
+versionSuffix=
 
 tzdbVersion=2024a
 
